--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "nyikwa-ramogi-luo-family-history",
   "version": "1.0.0",
+  "type": "module",
   "description": "Web app for Nyikwa Ramogi Luo family history with M-Pesa payment integration and SMS notifications",
   "main": "backend/server.js",
   "scripts": {
@@ -34,6 +35,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^8.19.2",
     "morgan": "^1.10.0",
+    "mysql2": "^3.15.3",
     "twilio": "^4.14.0"
   },
   "devDependencies": {
